deploy/kubernetes/manifests/appmesh/mesh.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sock-shop
  labels:
    mesh: sock-shop
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
