deploy/kubernetes/manifests/appmesh/carts-db.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: carts-db
  namespace: sock-shop
spec:
  awsName: carts-db.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: carts-db
