deploy/kubernetes/manifests/appmesh/carts-noretry.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: carts
  namespace: sock-shop
spec:
  awsName: carts.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: carts
