deploy/kubernetes/manifests/appmesh/catalog-db.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: catalogue-db
  namespace: sock-shop
spec:
  awsName: catalogue-db.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: catalogue-db
