deploy/kubernetes/manifests/appmesh/catalog.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sock-shop
  labels:
    mesh: sock-shop
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
#apiVersion: appmesh.k8s.aws/v1beta2
#kind: VirtualNode
#metadata:
#  name: catalog
#  namespace: sock-shop
#spec:
#  podSelector:
#    matchLabels:
#      name: catalogue
#  listeners:
#    - portMapping:
#        port: 80
#        protocol: http
#  backends:
#    - virtualService:
#        virtualServiceRef:
#          name: catalog
#  serviceDiscovery:
#    dns:
#      hostname: catalog.sock-shop.svc.cluster.local
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: catalog
  namespace: sock-shop
spec:
  awsName: catalog.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: catalog
