deploy/kubernetes/manifests/appmesh/front-end.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  awsName: front-end.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: front-end
