deploy/kubernetes/manifests/appmesh/orders-db.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: orders-db
  namespace: sock-shop
spec:
  awsName: orders-db.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: orders-db
