deploy/kubernetes/manifests/appmesh/orders.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: orders
  namespace: sock-shop
spec:
  awsName: orders.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: orders
