deploy/kubernetes/manifests/appmesh/payment.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: payment
  namespace: sock-shop
spec:
  awsName: payment.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: payment
