deploy/kubernetes/manifests/appmesh/qmaster.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: queue-master
  namespace: sock-shop
spec:
  awsName: queue-master.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: queue-master
