deploy/kubernetes/manifests/appmesh/rabbitmq.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: rabbitmq
  namespace: sock-shop
spec:
  awsName: rabbitmq.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: rabbitmq
