deploy/kubernetes/manifests/appmesh/shipping.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: shipping
  namespace: sock-shop
spec:
  awsName: shipping.sock-shop.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: shipping
